// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests > react/internals/CheckboxInput > Checked 1`] = `
<div
  data-dark={false}
>
  <input
    checked={true}
    className="charcoal-checkbox-input"
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`Storybook Tests > react/internals/CheckboxInput > Default 1`] = `
<div
  data-dark={false}
>
  <input
    className="charcoal-checkbox-input"
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`Storybook Tests > react/internals/CheckboxInput > Disabled 1`] = `
<div
  data-dark={false}
>
  <input
    checked={false}
    className="charcoal-checkbox-input"
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`Storybook Tests > react/internals/CheckboxInput > Invalid 1`] = `
<div
  data-dark={false}
>
  <input
    aria-invalid={true}
    checked={false}
    className="charcoal-checkbox-input"
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`Storybook Tests > react/internals/CheckboxInput > Rounded 1`] = `
<div
  data-dark={false}
>
  <div
    style={
      Object {
        "backgroundColor": "var(--ch-color-background-secondary)",
        "padding": 8,
      }
    }
  >
    <input
      checked={false}
      className="charcoal-checkbox-input"
      data-rounded={true}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</div>
`;
